<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appstudio.mrodrigues.temperatureapp.ACStateActivity">
    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/acstate"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="42sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnACSave"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnACGetLast"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/getlast"/>

    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_centerVertical="true"
    android:layout_centerInParent="true"
    android:layout_margin="30dp"
    android:id="@+id/layoutLevel">

    <TextView
        android:id="@+id/levelPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12dp"
        android:entries="@array/spinner_array"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:id="@+id/layoutTemp"
        android:layout_below="@id/layoutLevel">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tempNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/btnLevelPlus"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="adicionaMeioGrau"
            android:text="@string/levelPlus"/>
        <Button
            android:id="@+id/btnLevelMinus"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="subtraiMeioGrau"
            android:text="@string/levelMinus"/>
    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acpower"
        android:layout_above="@id/layoutLevel"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:textSize="22sp"
        />

</RelativeLayout>
