<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.appstudio.mrodrigues.temperatureapp.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="About"
            android:onClick="btnAbout"
            android:id="@+id/btnAbout"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logout"
        android:id="@+id/btnExit"
        android:background="@null"
        android:onClick="btnExit"
        />

</LinearLayout>

    <TextView
        android:id="@+id/airtemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airtemperature"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30ºC"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="48sp"
        android:layout_above="@id/airtemperature"
        android:layout_centerInParent="true"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/btnAC"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/acstate"
        android:onClick="btnAC"/>

    <Button
        android:id="@+id/btnHist"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/historicaldata"
        android:onClick="btnHist"/>

</LinearLayout>

</RelativeLayout>
